WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245960
NetworkStorageManager incorrectly accesses temporaryBlobPathsByConnection from multiple threads
https://bugs.webkit.org/show_bug.cgi?id=245960
Summary
NetworkStorageManager incorrectly accesses temporaryBlobPathsByConnection fro...
Kimmo Kinnunen
Reported
2022-10-03 05:16:35 PDT
NetworkStorageManager incorrectly accesses temporaryBlobPathsByConnection from multiple threads
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-03 05:17:01 PDT
<
rdar://problem/100712880
>
Kimmo Kinnunen
Comment 2
2022-10-03 05:28:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4922
EWS
Comment 3
2022-10-03 23:22:21 PDT
Committed
255111@main
(eb3ece6f3ccd): <
https://commits.webkit.org/255111@main
> Reviewed commits have been landed. Closing PR #4922 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug