NetworkStorageManager incorrectly accesses temporaryBlobPathsByConnection from multiple threads https://bugs.webkit.org/show_bug.cgi?id=245960 rdar://problem/100712880

Reviewed by Sihui Liu.

Fix by accessing only in the work queue.
Add thread safety annotations to check the access.

* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
(WebKit::NetworkStorageManager::stopReceivingMessageFromConnection):
(WebKit::NetworkStorageManager::registerTemporaryBlobFilePaths):
(WebKit::NetworkStorageManager::putOrAdd):
* Source/WebKit/NetworkProcess/storage/NetworkStorageManager.h:

Canonical link: https://commits.webkit.org/255111@main